// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VideoCard > renders grid type correctly 1`] = `
<li
  className="flex flex-col mb-8 "
>
  <img
    alt="title"
    className="cursor-pointer rounded-lg"
    onClick={[Function]}
    src="http://image/"
  />
  <div>
    <p
      className="font-semibold my-2 line-clamp-2 "
    >
      title
    </p>
    <p
      className="text-sm opacity-70 "
    >
      channelTitle
    </p>
    <p
      className="text-sm opacity-70 "
    >
      just now
    </p>
  </div>
</li>
`;

exports[`VideoCard > renders list type correctly 1`] = `
<li
  className="flex gap-2 "
>
  <img
    alt="title"
    className="cursor-pointer w-40 rounded-md"
    onClick={[Function]}
    src="http://image/"
  />
  <div>
    <p
      className="font-semibold my-2 line-clamp-2 text-sm font-normal"
    >
      title
    </p>
    <p
      className="text-sm opacity-70 text-xs"
    >
      channelTitle
    </p>
    <p
      className="text-sm opacity-70 text-xs"
    >
      just now
    </p>
  </div>
</li>
`;
